[gd_scene load_steps=26 format=2]

[ext_resource path="res://escenas/Ferreteria.gd" type="Script" id=1]
[ext_resource path="res://asset/fabrica.jpg" type="Texture" id=2]
[ext_resource path="res://asset/dialo4.png" type="Texture" id=3]
[ext_resource path="res://asset/barradeobjetos.png" type="Texture" id=4]
[ext_resource path="res://asset/libro.png" type="Texture" id=5]
[ext_resource path="res://Fuentes/Supersonic Rocketship.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://asset/abuelojuego.png" type="Texture" id=7]
[ext_resource path="res://asset/cajardouu.png" type="Texture" id=8]
[ext_resource path="res://asset/cajarnaise.png" type="Texture" id=9]
[ext_resource path="res://asset/cajartres.png" type="Texture" id=10]
[ext_resource path="res://asset/Boton atras1_desplazamiento.png" type="Texture" id=11]
[ext_resource path="res://asset/Boton atras2_desplazamiento.png" type="Texture" id=12]
[ext_resource path="res://asset/libro2.png" type="Texture" id=13]
[ext_resource path="res://asset/3_Curious_Critters_Comedor_Ferreteria_Aula.ogg" type="AudioStream" id=14]
[ext_resource path="res://asset/ButomPressSound.ogg" type="AudioStream" id=15]
[ext_resource path="res://Fuentes/Fuente1.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://asset/Exclamaci√≥nRojo.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
<<<<<<< HEAD
resource_name = "anim2"
tracks/0/type = "value"
tracks/0/path = NodePath("admiracion:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("texto1:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
=======
resource_name = "cuaderno2"
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("cuadroTexto:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("barraObjeto:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cuaderno:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("cuaderno2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite_Cuaderno:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("texto4:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.000105068, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("texto3:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TextureButton:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("texto4:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1.96753 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 222.305, 51.947 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("cuaderno2:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1.96753 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 773.134, 201.942 ) ]
}

<<<<<<< HEAD
[sub_resource type="Animation" id=3]
=======
[sub_resource type="Animation" id=2]
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureButton:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

<<<<<<< HEAD
[sub_resource type="Animation" id=4]
=======
[sub_resource type="Animation" id=3]
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("cuadroTexto:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("barraObjeto:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cuaderno:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("adolfo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("texto1:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("texto1:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 230.339, 57.4076 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("cuadroTexto:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 614.269, 115.354 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("barraObjeto:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 180.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("cuaderno:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 908.733, 204.796 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("TextureButton:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 854.259, 39.9442 ) ]
}

<<<<<<< HEAD
[sub_resource type="Animation" id=5]
=======
[sub_resource type="Animation" id=4]
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("cuadroTexto:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("texto2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("cuaderno:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("adolfo:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("barraObjeto:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("clavos:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("clavos2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("clavos3:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("tornillos:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("tornillos2:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("tornillos3:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("tuercas:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("tuercas2:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("tuercas3:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("texto2:rect_position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 245.261, 67.0564 ) ]
}

<<<<<<< HEAD
[sub_resource type="Animation" id=6]
=======
[sub_resource type="Animation" id=5]
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("texto3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cuadroTexto:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("barraObjeto:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("cuaderno:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("adolfo:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite_Cuaderno:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("cuaderno2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TextureButton:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("texto3:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1.98541 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 224.634, 63.883 ) ]
}

<<<<<<< HEAD
[sub_resource type="DynamicFont" id=7]
size = 20
=======
[sub_resource type="DynamicFont" id=6]
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 16 )

[node name="Ferreteria" type="Node2D"]
script = ExtResource( 1 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 510.381, 297.073 )
scale = Vector2( 0.805198, 0.840371 )
texture = ExtResource( 2 )

[node name="cuadroTexto" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
<<<<<<< HEAD
position = Vector2( 614.269, 115.354 )
scale = Vector2( 0.83597, 0.878427 )
=======
position = Vector2( 363.647, 111.037 )
scale = Vector2( 0.745408, 0.878427 )
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
texture = ExtResource( 3 )

[node name="barraObjeto" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
<<<<<<< HEAD
position = Vector2( 803.308, 217.745 )
rotation = 3.14159
=======
position = Vector2( 179.51, 176.734 )
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
scale = Vector2( 0.476635, 0.402879 )
texture = ExtResource( 4 )

[node name="cuaderno" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
<<<<<<< HEAD
position = Vector2( 908.733, 204.796 )
=======
position = Vector2( 64.7717, 183.211 )
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
scale = Vector2( 0.278375, 0.228909 )
texture = ExtResource( 5 )

[node name="cuaderno2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
<<<<<<< HEAD
position = Vector2( 773.134, 201.942 )
=======
position = Vector2( 205.105, 186.075 )
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
scale = Vector2( 0.278375, 0.228909 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
<<<<<<< HEAD
anims/anim2 = SubResource( 1 )
anims/cuaderno2 = SubResource( 2 )
anims/salirEscena = SubResource( 3 )
anims/texto1 = SubResource( 4 )
anims/texto2 = SubResource( 5 )
anims/texto3 = SubResource( 6 )

[node name="texto1" type="Label" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = 230.339
margin_top = 57.4076
margin_right = 989.339
margin_bottom = 169.408
custom_fonts/font = SubResource( 7 )
text = "¬°Hey, Hola! me contaron que andas buscando informacion sobre
los derechos de comunicacion! Pero recien llegaron a mi ferreteria
unas cajas con tornillos y tuercas que deboordenar..."

[node name="texto2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 245.261
margin_top = 67.0564
margin_right = 971.26
margin_bottom = 179.056
custom_fonts/font = SubResource( 7 )
=======
anims/cuaderno2 = SubResource( 1 )
anims/salirEscena = SubResource( 2 )
anims/texto1 = SubResource( 3 )
anims/texto2 = SubResource( 4 )
anims/texto3 = SubResource( 5 )

[node name="texto1" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 23.1264
margin_top = 63.883
margin_right = 749.126
margin_bottom = 175.883
custom_fonts/font = SubResource( 6 )
text = "Ya s√© a qu√© ven√≠s, pero reci√©n llegaron unas cajas con tornillos y tuercas que debo
ordenar en el dep√≥sito. Si me das una mano, seguro terminamos r√°pido para poder charlar"

[node name="texto2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 23.1264
margin_top = 63.883
margin_right = 749.126
margin_bottom = 175.883
custom_fonts/font = SubResource( 6 )
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
text = "Muchas gracias por tu ayuda. Ahora podemos hablar"

[node name="texto3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = 224.634
margin_top = 63.883
margin_right = 979.634
margin_bottom = 175.883
<<<<<<< HEAD
custom_fonts/font = SubResource( 7 )
=======
custom_fonts/font = SubResource( 6 )
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
text = "Haz click en el cuaderno que est√° en mostrador para llevarte las anotaciones"

[node name="texto4" type="Label" parent="."]
modulate = Color( 0, 0, 0, 0 )
<<<<<<< HEAD
margin_left = 222.305
margin_top = 51.947
margin_right = 948.304
margin_bottom = 163.947
custom_fonts/font = SubResource( 7 )
=======
margin_left = 23.1264
margin_top = 63.883
margin_right = 749.126
margin_bottom = 175.883
custom_fonts/font = SubResource( 6 )
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
text = "Ahora te aconsejo que vayas a la imprenta y a la oficina de internet.
 All√≠ seguramente habr√° alguien con quien hablar."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="adolfo" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 114.091, 327.911 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="clavos" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 676.864, 341.069 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="clavos2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 675.106, 443.038 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="clavos3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 675.106, 545.007 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )

[node name="tornillos" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 821.027, 344.585 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="tornillos2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 819.269, 444.796 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="tornillos3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 819.269, 548.523 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 9 )

[node name="tuercas" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 956.4, 344.585 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="tuercas2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 959.916, 446.554 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="tuercas3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 956.4, 546.765 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 10 )

[node name="TextureButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
<<<<<<< HEAD
margin_left = 854.259
margin_top = 39.9442
margin_right = 1330.26
margin_bottom = 453.944
=======
margin_left = 600.826
margin_top = 94.4853
margin_right = 1076.83
margin_bottom = 508.485
>>>>>>> bd164b9edcb76a049ae8f2e41e36834a58f97cb1
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite_Cuaderno" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 602.861
margin_top = 297.85
margin_right = 920.861
margin_bottom = 657.85
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 13 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 0 )
margin_left = 419.04
margin_top = 79.889
margin_right = 804.04
margin_bottom = 111.889
custom_fonts/font = SubResource( 8 )
text = "¬øMe ayudarias primero?"

[node name="admiracion" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 385.879, 91.9477 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 17 )
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Sprite_Cuaderno" to="." method="_on_Sprite_Cuaderno_pressed"]
